fix: add spacing on social buttons profile + changed mobile view detailspost

--- a/styles/_imagewithtext.scss
+++ b/styles/_imagewithtext.scss
@@ -131,6 +131,7 @@
 
     .profile__info-socials{
         flex-direction: row;
+        gap: 1rem;
     }
 }
 
@@ -156,5 +157,6 @@
 
     .profile__info-socials{
         flex-direction: row;
+        gap: 1rem;
     }
 }
